--- a/common/math/graphics/dsp/pz_allpass.tex
+++ b/common/math/graphics/dsp/pz_allpass.tex
@@ -18,14 +18,18 @@
   % axes
   %-------------------------------------
   \psaxes[linecolor=axis,labels=none,ticks=none]{<->}(0,0)(-1.25,-1.25)(1.5,1.25)%
-  \rput[tr](1.5,-1.5mm){\color{axis}$\scy\Reb{z}$}%
-  \uput{3pt}[ 220](0,1.25){\color{axis}$\scy\Imb{z}$}%
+  \rput[tr](1.5,-1.5mm){\color{gray}$\scy\Reb{z}$}%
+  \uput{3pt}[ 220](0,1.25){\color{gray}$\scy\Imb{z}$}%
+  \uput{1pt}[ 45]( 0, 1){\color{gray}$\scy+1$}%
+  \uput{1pt}[-45]( 0,-1){\color{gray}$\scy-1$}%
+  \uput{1pt}[ 45]( 1, 0){\color{gray}$\scy+1$}%
+  \uput{1pt}[135](-1, 0){\color{gray}$\scy-1$}%
   %-------------------------------------
   % unit circle
   %-------------------------------------
   \pscircle[linecolor=unitcircle](origin){1}%                 unit circle
-  \rput[bl](-1.2,-1.2){\rnode[b]{circleL}{$\scy\abs{z}=1$}}% circle label
-  \ncline[linecolor=unitcircle,linestyle=dashed,nodesepA=0pt]
+  \rput[bl](-1.2,-1.2){\rnode[b]{circleL}{\color{gray}$\scy\abs{z}=1$}}% circle label
+  \ncline[linecolor=gray,linestyle=dashed,nodesepA=0pt]
          {->}{circleL}{circleP}% circle arrow from circle label to circle point
   %-------------------------------------
   % pole and zero locations
@@ -44,7 +48,8 @@
   %-------------------------------------
   \psline[linewidth=0.5pt,linestyle=dashed,linecolor=unitcircle](0,0)(z1)%
   \psline[linewidth=0.5pt,linestyle=dashed,linecolor=unitcircle](0,0)(z2)%
-  \uput{2pt}[22.5](0,0){$\phi$}%
+  \uput{5pt}[22.5](0,0){$+\phi$}%
+  \uput{5pt}[-22.5](0,0){$-\phi$}%
   \uput{1pt}[-45](z1){\color{blue}$re^{i\phi}$}%
   \uput{1pt}[-45](p1){\color{red}$\frac{1}{r}e^{i\phi}$}%
   %-------------------------------------
