IIR order 1 results and proofs

--- a/common/harTrig.tex
+++ b/common/harTrig.tex
@@ -807,6 +807,7 @@ Let $\opDif\in\clOcc$ be the differentiation operator.
   \citerp{bottazzini}{12}
   }
 \label{cor:trig_ceesee}
+\label{cor:eform}
 %--------------------------------------
 \corbox{\begin{array}{rc>{\ds}lC | rc>{\ds}lC}
    \cos(x) &=& \Re\Big(e^{ix}\Big) = \frac{e^{ix} + e^{-ix}}{2 } & \forall x\in\R &
