--- a/common/zcalc1.tex
+++ b/common/zcalc1.tex
@@ -7,7 +7,7 @@
 \chapter{Coefficient Calculation}
 %=======================================
 %--------------------------------------
-\section{Order 1 IIR filter}
+\section{IIR order 1 filter}
 %--------------------------------------
 %--------------------------------------
 \begin{lemma}[\thmd{order 1 filter}]
