--- a/dsp/front.tex
+++ b/dsp/front.tex
@@ -72,7 +72,7 @@
 \begin{tabular}{ll}
     title:              & \fntAdventor\itshape{Operations on Sequences}
   \\document type:      & \ttfamily{book}
-  \\series:             & {\itshape Mathematical Structure and Design}
+ %\\series:             & {\itshape Mathematical Structure and Design}
  %\\volume:             & \framebox{3}
   \\author:             & \fntHeros{Daniel J. Greenhoe}
   \\version:            & \versionstamp
