dsp formatting edits

--- a/common/dsp.tex
+++ b/common/dsp.tex
@@ -715,7 +715,8 @@ Let $\Dy(\omega)$ and $\Dx(\omega)$ be the \ope{DTFT}s \xref{def:dtft} of the se
         && \text{by \thme{CQF theorem}}
         && \text{\xref{thm:cqf}}
       \\&= \brlr{(\pm) \sum_{\ell=0}^n \bcoef{n}{\ell} \brs{\opddw}^\ell\brs{e^{-i\omega\xN}}\cdot\brs{\opddw}^{n-\ell}\brs{\Dy^\ast(\omega+\pi)}}_{\omega=\pi}
-        && \text{by \thme{Leibnitz GPR} \xref{lem:LGPR}}
+        && \text{by \thme{Leibnitz GPR}}
+        && \text{\xref{lem:LGPR}}
       \\&= \brlr{(\pm) \sum_{\ell=0}^n \bcoef{n}{\ell} (-i\xN)^\ell e^{-i\omega\xN}\brs{\opddw}^{n-\ell}\brs{\Dy^\ast(\omega+\pi)}}_{\omega=\pi}
       \\&= \brlr{(\pm) \cancelto{1}{e^{-i\pi\xN}} \sum_{\ell=0}^n \bcoef{n}{\ell} {-i\xN}^\ell \brs{\opddw}^{n-\ell}\brs{\Dy^\ast(\omega+\pi)}}_{\omega=\pi}
       \\&= \brlr{(\pm) (-1)^\xN \sum_{\ell=0}^n \bcoef{n}{\ell} {-i\xN}^\ell \brs{\opddw}^{n-\ell}\brs{\Dy^\ast(\omega+\pi)}}_{\omega=\pi}
@@ -738,25 +739,6 @@ Let $\Dy(\omega)$ and $\Dx(\omega)$ be the \ope{DTFT}s \xref{def:dtft} of the se
 
 \end{enumerate}
 \end{proof}
-
-
-
-
-
-%\begin{figure}[h]
-%\begin{center}
-%\begin{tabular}{cc}
-%  %\includegraphics*[width=5\tw/16, clip=true]{../common/wavelets/d2sc_x3125.eps} &
-%  \psset{unit=10mm}\input{../common/wavelets/graphics/d2_phi_h.tex} &
-%  \setlength{\unitlength}{0.10mm}\input{../common/wavelets/graphics/D2_pz.tex}  \\
-%   Scaling function & Pole-zero plot
-%\end{tabular}
-%\caption{
-%   Daubechies-2 scaling function and scaling filter pole-zero plot
-%   \label{fig:pz_d2}
-%   }
-%\end{center}
-%\end{figure}
 
 
 
