--- a/common/dspcalculus.tex
+++ b/common/dspcalculus.tex
@@ -19,7 +19,7 @@ How are they related?
   \\
   \fa(t) &\eqd& \ddt \fv(t)
 \end{array}}
-\vfill
+ 
 \thmbox{\begin{array}{rc>{\ds}l}
   \fx(t) &=& \int_{u=0}^t \fv(u) \du + \mcom{\fx(0)}{initial condition}
   \\
@@ -35,10 +35,10 @@ How are they related?
 
 
 %---------------------------------------
-%\newpage\mbox{}\vfill
+%\newpage\mbox{} 
 %---------------------------------------
 What is the Fourier Transform of the Differential Operator?
-\vfill
+ 
 {\begin{align*}
   \boxed{\opFT \brs{\ddt \fx(t)}} 
     &\eqd \int_{t=-\infty}^{t=+\infty} \mcom{\brs{\ddt \fx(t)}}{$\dv$} \mcom{e^{-i\omega t}}{$u$} \dt
@@ -53,10 +53,10 @@ What is the Fourier Transform of the Differential Operator?
 
 
 %---------------------------------------
-%\newpage\mbox{}\vfill
+%\newpage\mbox{} 
 %---------------------------------------
 What is the Fourier Transform of the Integral Operator?
-\vfill
+ 
 {\begin{align*}
   \boxed{\opFT \int_{u=-\infty}^{u=t} \fx(u) \du}
     &\eqd \int_{t=-\infty}^{t=+\infty} \brs{\int_{u=-\infty}^{u=t} \fx(u) \du} e^{-i\omega t} \dt
@@ -75,10 +75,10 @@ What is the Fourier Transform of the Integral Operator?
 %
 
 %---------------------------------------
-%\newpage\mbox{}\vfill
+%\newpage\mbox{} 
 %---------------------------------------
 Digital Differentiation Method \#1: \ope{Difference}\footnote{\citerpgc{williams1986}{69}{9780132018562}{Difference}}
-\vfill
+ 
 \begin{align*}
   \fy[n]
     &\eqd \fx[n] - \fx[n-1]
@@ -96,11 +96,11 @@ Digital Differentiation Method \#1: \ope{Difference}\footnote{\citerpgc{williams
 
 
 %---------------------------------------
-%\newpage\mbox{}\vfill
+%\newpage\mbox{} 
 %---------------------------------------
-\vfill
+ 
 Digital Differentiation = Continuous Differentiation?\footnote{\citerpgc{williams1986}{70}{9780132018562}{Figure 2.14(a)}}
-\vfill
+ 
 \begin{align*}
   \abs{\frac{z-1}{z}}_{z=e^{i\omega}}
     &= \abs{\frac{e^{i\omega}-1}
@@ -116,16 +116,16 @@ Digital Differentiation = Continuous Differentiation?\footnote{\citerpgc{william
 
 
 %---------------------------------------
-%\newpage\mbox{}\vfill
+%\newpage\mbox{} 
 %---------------------------------------
-\includegraphics[height=80mm]{graphics/diff.pdf}
+\includegraphics{graphics/diff.pdf}
 
 
 %---------------------------------------
-%\newpage\mbox{}\vfill
+%\newpage\mbox{} 
 %---------------------------------------
 Digital Differentiation Method \#2: \ope{Central Difference}\footnote{\citerpgc{williams1986}{69}{9780132018562}{Difference}}
-\vfill
+ 
 \begin{align*}
   \fy[n]
     &\eqd \frac{\fx[n] - \fx[n-2]}{2}
@@ -143,11 +143,11 @@ Digital Differentiation Method \#2: \ope{Central Difference}\footnote{\citerpgc{
 
 
 %---------------------------------------
-%\newpage\mbox{}\vfill
+%\newpage\mbox{} 
 %---------------------------------------
-\vfill
+ 
 Central Difference = Continuous Differentiation?\footnote{\citerpgc{williams1986}{70}{9780132018562}{Figure 2.14(b)}}
-\vfill
+ 
 \begin{align*}
   \abs{\frac{z^2-1}{2z^2}}_{z=e^{i\omega}}
     &= \abs{\frac{e^{2i\omega}-1}
@@ -170,17 +170,17 @@ Central Difference = Continuous Differentiation?\footnote{\citerpgc{williams1986
 
 
 %---------------------------------------
-%\newpage\mbox{}\vfill
+%\newpage\mbox{} 
 %---------------------------------------
-\includegraphics[height=80mm]{graphics/cendiff.pdf}
+\includegraphics{graphics/cendiff.pdf}
 
 
 
 %---------------------------------------
-%\newpage\mbox{}\vfill
+%\newpage\mbox{} 
 %---------------------------------------
 Digital Integration Method \#1: \opd{Summation}
-\vfill
+ 
 {\begin{align*}
   \fy[n]
     &\eqd \fx[n] + \mcom{\fx[n-1] + \fx[n-2] + \fx[n-3] + \fx[n-4] + \fx[n-5] + \cdots}{{$\fy[n-1]$}}
@@ -202,10 +202,10 @@ Digital Integration Method \#1: \opd{Summation}
 
 
 %---------------------------------------
-%\newpage\mbox{}\vfill
+%\newpage\mbox{} 
 %---------------------------------------
 Digital Integration Method \#2: \opd{Trapezoid}
-\vfill
+ 
 {\begin{align*}
   \fy[n]
     &\eqd \frac{\fx[n]+\fx[n-1]}{2} + \frac{\fx[n-1]+\fx[n-2]}{2} + \frac{\fx[n-2]+\fx[n-3]}{2} + \cdots
@@ -227,10 +227,10 @@ Digital Integration Method \#2: \opd{Trapezoid}
 
 
 %%---------------------------------------
-%\newpage\mbox{}\vfill
+%\newpage\mbox{} 
 %%---------------------------------------
 %Digital Integration Method \#2: \opd{Simpson's Rule}
-%\vfill
+% 
 %{\begin{align*}
 %  \fy[n]
 %    &\eqd \frac{\fx[n  ]+4\fx[n -1]+\fx[n -2]}{3}   
@@ -282,11 +282,11 @@ Digital Integration Method \#2: \opd{Trapezoid}
 %
 
 %---------------------------------------
-%\newpage\mbox{}\vfill
+%\newpage\mbox{} 
 %---------------------------------------
-\vfill
-Digital Summation Integration = Continuous Integration?
-\vfill
+ 
+Is digital summation integration equivalent to continuous integration?
+
 \begin{align*}
   \abs{\frac{z}{z-1}}_{z=e^{i\omega}}
     &= \abs{\frac{e^{i\omega}}{e^{i\omega}-1}}
@@ -298,17 +298,17 @@ Digital Summation Integration = Continuous Integration?
 
 
 %---------------------------------------
-%\newpage\mbox{}\vfill
+%\newpage\mbox{} 
 %---------------------------------------
-\includegraphics[height=80mm]{graphics/IntSum.pdf}
+\includegraphics{graphics/IntSum.pdf}
 
 
 %---------------------------------------
-%\newpage\mbox{}\vfill
+%\newpage\mbox{} 
 %---------------------------------------
-\vfill
-Digital Trapezoid Integration = Continuous Integration?
-\vfill
+ 
+Is digital trapezoid integration equivalent to continuous integration?
+ 
 \begin{align*}
   \abs{\frac{1}{2}\brp{\frac{z+1}{z-1}}}_{z=e^{i\omega}}
     &= \frac{1}{2}
@@ -327,9 +327,9 @@ Digital Trapezoid Integration = Continuous Integration?
 
 
 %---------------------------------------
-%\newpage\mbox{}\vfill
+%\newpage\mbox{} 
 %---------------------------------------
-\includegraphics[height=80mm]{graphics/IntTrap.pdf}
+\includegraphics{graphics/IntTrap.pdf}
 
 
 
