--- a/common/pwspace.tex
+++ b/common/pwspace.tex
@@ -156,18 +156,22 @@ Let $\sigma\in\Rp$.
     \begin{align*}
       \ff(x)
         &= \int_\omega \Ff(\omega) e^{i\omega t} \dw
-        && \text{by \thme{inverse Fourier transform} \xref{thm:opFTi}}
+        && \text{by \thme{inverse Fourier transform}}
+        && \text{\xref{thm:opFTi}}
       \\&= \int_\omega T \Ffd(\omega)\Fs(\omega) e^{i\omega t} \dw
         && \text{if $W\le\frac{1}{2T}$}
       \\&= T \ffd(x) \conv \fs(x) 
-        && \text{by \thme{Convolution theorem} \xref{thm:conv}}
+        && \text{by \thme{Convolution theorem}}
+        && \text{\xref{thm:conv}}
       \\&= T \int_u [\ffd(u)] \fs(x-u) \du
-        && \text{by \ope{convolution} definition \xref{def:conv}} 
+        && \text{by \ope{convolution} definition}
+        && \text{\xref{def:conv}} 
       \\&= T \int_u \left[ \sum_n\ff(u)\delta(u-n\tau) \right] \fs(x-u) \du
-        && \text{by \ope{sampling} definition \xref{thm:f_sampling}}
+        && \text{by \ope{sampling} definition}
+        && \text{\xref{thm:f_sampling}}
       \\&= T \sum_{n\in\Z} \int_u \ff(u)\fs(x-u)\delta(u-n\tau) \du
       \\&= T \sum_{n\in\Z} \ff(n\tau)\fs(x-n\tau)
-        && \text{by property of \fncte{Dirac delta} distribution}
+        && \text{by prop. of \fncte{Dirac delta}}
       \\&= T \sum_{n\in\Z} \ff(n\tau) 
              \frac{\sin\left[\frac{\pi}{\tau}(x-n\tau)\right]}
                   {\frac{\pi}{\tau}(x-n\tau)       }
@@ -346,9 +350,11 @@ Then
    \\&=    \int_t \left[\sum_{n\in\Z} \ff(x) \delta(x-n\tau)\right] e^{-i\omega t} \dt
    \\&=    \sum_{n\in\Z} \int_t \ff(x) \delta(x-n\tau) e^{-i\omega t} \dt
    \\&=    \sum_{n\in\Z} \ff(n\tau) e^{-i\omega n\tau}
-     &&    \text{by definition of $\delta$ \ifxref{relation}{def:dirac}}
+     &&    \text{by definition of $\delta$}
+     &&    \text{\ifxref{relation}{def:dirac}}
    \\&=    \frac{2\pi}{\tau} \sum_{n\in\Z} \Ff\left(\omega + \frac{2\pi}{\tau}n \right)
-     &&    \text{by \thme{IPSF} \xref{thm:ipsf}}
+     &&    \text{by \thme{IPSF}}
+     &&    \text{\xref{thm:ipsf}}
    \\&=    \frac{2\pi}{\tau} \sum_{n\in\Z} \Ff\left(\omega-\frac{2\pi}{\tau}n\right)
 \end{align*}
 \end{proof}
